*
* 0.2.19
*

- Added SMS driver and subagent to send SMS via remote NetXMS agent
- Added parameters Net.RemoteShareStatus and Net.RemoteShareStatusText
  to WINNT subagent


*
* 0.2.18
*

- Windows console: added "subordinates" view in object browser
- WinPerf subagent:
	- Improved non-English Windows support
	- Added new parameter: System.IO.DiskTime
- New MIB added: FIBRE-CHANNEL-FE-MIB
- Fixed issues: #23, #129, #163, #164, #165, #167, #168, #170, #172, #173,
                #174, #175, #176, #177, #178


*
* 0.2.17
*

- Implemented alarm timeouts
- ODBCQUERY subagent improved
- Web interface improved
- Object browser in Windows console improved
- Fixed issues: #122, #128, #130, #136, #138, #141, #156, #157, #158,
                #159, #161, #162


*
* 0.2.16
*

- Implemented user authentification by certificates
- Management packs fully functional - templates, events, and SNMP traps
  can be exported and imported
- Cluster monitoring improved
- Node names resolution working
- Implemented OCI based driver for Oracle database
- UPS subagent: added support for Microdowell devices
- Windows console:
	- Added layer 2 topology view for compatible switches
	- Object search improved
	- Graphs improved:
		- Area graphs
		- Predefined graphs
		- Minor UI improvements
	- Added possibility to manage/unmanage set of child objects
	- Added possibility to hide unmanaged leaf objects
	- Container objects can be placed above all others
	- Other small UI improvements
- Fixed issues: #90, #106, #120, #143, #147, #148, #149, #150, #152, #153, #155


*
* 0.2.15
*

- Added initial support for cluster monitoring
- Added preliminary support for management packs
- Added SNMP proxy functionality to agent
- IPSO agent improved
- Added Extended Checksum subagent
- Added ODBC Query subagent
- New agent parameters: Process.CountEx(), File.Time.Access(),
  File.Time.Change(), and File.Time.Modify()
- Parameters File.Size() and File.Count() improved
- Parameters Process.XXX improved 