@@ -1,4 +1,4 @@
-/* $Id: log.cpp,v 1.7 2007-06-28 09:14:05 victor Exp $ */
+/* $Id: log.cpp,v 1.8 2007-09-15 18:22:20 victor Exp $ */
 /* 
 ** NetXMS multiplatform core agent
 ** Copyright (C) 2003, 2004,2005,2006 Victor Kirhenshtein
@@ -71,7 +71,7 @@ void InitLog(void)
          t = time(NULL);
          loc = localtime(&t);
          strftime(szTimeBuf, 32, "%d-%b-%Y %H:%M:%S", loc);
-         fprintf(m_hLogFile, "**************************************************************\r\n[%s] Log file opened\r\n", szTimeBuf);
+         fprintf(m_hLogFile, "**************************************************************\n[%s] Log file opened\n", szTimeBuf);
       }
 
       m_mutexLogAccess = MutexCreate();
@@ -280,6 +280,16 @@ void WriteLog(DWORD msg, WORD wType, char *format, ...)
       if (FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_HMODULE | FORMAT_MESSAGE_ARGUMENT_ARRAY,
                         NULL, msg, 0, (LPTSTR)&lpMsgBuf, 0, strings)>0)
       {
+         char *pCR;
+
+         // Replace trailing CR/LF pair with LF
+         pCR = strchr((char *)lpMsgBuf, '\r');
+         if (pCR != NULL)
+         {
+            *pCR = '\n';
+            pCR++;
+            *pCR = 0;
+         }
          WriteLogToFile((char *)lpMsgBuf);
          LocalFree(lpMsgBuf);
       }
