@@ -622,15 +622,16 @@ DWORD LIBNXCL_EXPORTABLE NXCGetLastValues(NXC_SESSION hSession, DWORD dwNodeId,
          *pdwNumItems = pResponse->GetVariableLong(VID_NUM_ITEMS);
          *ppValueList = (NXC_DCI_VALUE *)malloc(sizeof(NXC_DCI_VALUE) * (*pdwNumItems));
          memset(*ppValueList, 0, sizeof(NXC_DCI_VALUE) * (*pdwNumItems));
-         for(i = 0, dwId = VID_DCI_VALUES_BASE; i < *pdwNumItems; i++)
+         for(i = 0, dwId = VID_DCI_VALUES_BASE; i < *pdwNumItems; i++, dwId +=2)
          {
             (*ppValueList)[i].dwId = pResponse->GetVariableLong(dwId++);
             pResponse->GetVariableStr(dwId++, (*ppValueList)[i].szName, MAX_ITEM_NAME);
             pResponse->GetVariableStr(dwId++, (*ppValueList)[i].szDescription, MAX_DB_STRING);
-            (*ppValueList)[i].iSource = pResponse->GetVariableShort(dwId++);
-            (*ppValueList)[i].iDataType = pResponse->GetVariableShort(dwId++);
+            (*ppValueList)[i].nSource = pResponse->GetVariableShort(dwId++);
+            (*ppValueList)[i].nDataType = pResponse->GetVariableShort(dwId++);
             pResponse->GetVariableStr(dwId++, (*ppValueList)[i].szValue, MAX_DB_STRING);
             (*ppValueList)[i].dwTimestamp = pResponse->GetVariableLong(dwId++);
+            (*ppValueList)[i].nStatus = pResponse->GetVariableShort(dwId++);
          }
       }
       delete pResponse;
